# ai-customer-support

./: .gitignore  Dockerfile  LICENSE  README.md  components.json  env.sample  eslint.config.js  jsconfig.json  package.json  pnpm-lock.yaml  pyproject.toml  refund_return_policy.txt  vite.config.js
.github/workflows/: deploy-reindexer.yml
app/: agentic_tools.py  auth.py  database.py  main.py  models.py  routes.py  schemas.py
app/agentic_tools/: __init__.py  constants.py  tools.py  utils.py
app/controllers/: __init__.py  constants.py  policy.py
app/dependencies/: __init__.py  api_authentication.py  authentication.py  constants.py  rate_limiter.py
app/middlewares/: __init__.py  authentication.py  rate_limiter.py
app/models/: __init__.py  api_key.py  auth_token.py  base.py  constants.py
app/routers/: __init__.py  constants.py  tickets.py  users.py
lambda/: reindexer.py  requirements.txt
ui/src/: index.css  main.jsx
ui/src/apis/: axois.js  constants.js  stream.js  tickets.js  users.js
ui/src/components/: App.jsx  routeConstants.js  routeConstants.jsx
ui/src/components/Conversation/: UserInput.jsx  constants.js
ui/src/components/Login/: index.jsx
ui/src/components/SignIn/: constants.js  index.jsx
ui/src/components/Ticket/: Description.jsx  Problem.jsx  Response.jsx  UserInput.jsx  constants.js  index.jsx
ui/src/components/commons/: NotFound.jsx
ui/src/components/shadcn/: button.jsx  checkbox.jsx  empty.jsx
ui/src/constants/: index.js  query.js
ui/src/utils/: storage.js
ui/stylesheets/: _custom_classes.css  index.css
(+2 files in other folders)
